<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/credentialsFragment">

    <fragment
        android:id="@+id/credentialsFragment"
        android:name="com.thanosfisherman.grpcplayground.presentation.fragments.CredentialsFragment"
        android:label="@string/credentials_fragment_label"
        tools:layout="@layout/fragment_credentials">
        <action
            android:id="@+id/action_credentialsFragment_to_credentialDetailsFragment"
            app:destination="@id/credentialDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/credentialDetailsFragment"
        android:name="com.thanosfisherman.grpcplayground.presentation.fragments.CredentialDetailsFragment"
        android:label="@string/credential_details_fragment_label"
        tools:layout="@layout/fragment_credential_details">
        <argument
            android:name="credentialsParcelable"
            app:argType="com.thanosfisherman.grpcplayground.domain.models.DCredential" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.thanosfisherman.grpcplayground.presentation.fragments.UserProfileFragment"
        android:label="@string/user_profile_fragment_label"
        tools:layout="@layout/fragment_user_profile" />
</navigation>